# mailproxy

./: .gitignore  README.md  command.md  pyproject.toml  shell.nix
mailproxy/: __main__.py  auth.py  bin.py  config.py  db.py  imap.py  imap_backend.py  imap_frontend.py  imap_parsing.py  model.py  oauth.py  parser.py  reader.py  smtp.py  smtp_backend.py  smtp_frontend.py  utils.py
mailproxy/assets/: dummy-cert.pem  dummy-key.pem
mailproxy/presets/: gmail.json  microsoft.json  yahoo.json
mailproxy/smtp/: backend.py  frontend.py  reader.py
scripts/: ralph.py
tests/: e2e_test.py  test_auth.py  test_config.py  test_db.py  test_imap_parsing.py  test_reader.py  test_smtp_backend.py  test_smtp_frontend.py  test_smtp_reader.py  test_sync.py  test_utils.py
